base/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ente-museum
  labels:
    app.kubernetes.io/component: museum
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: museum
  template:
    metadata:
      labels:
        app.kubernetes.io/component: museum
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 1000
        runAsNonRoot: true
        runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: museum
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              add:
                - NET_BIND_SERVICE
              drop:
                - ALL
          image: ghcr.io/ente-io/server
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 30
            initialDelaySeconds: 5
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            periodSeconds: 30
          resources:
            limits:
              cpu: 1000m
              memory: 1Gi
            requests:
              cpu: 100m
              memory: 256Mi
          volumeMounts:
            - name: museum-data
              mountPath: /data
      volumes:
        - name: museum-data
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ente-web
  labels:
    app.kubernetes.io/component: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: web
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
    spec:
      securityContext:
        # fsGroup: 1000
        # fsGroupChangePolicy: OnRootMismatch
        # runAsGroup: 1000
        # runAsNonRoot: true
        # runAsUser: 1000
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: web
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: false
          image: ghcr.io/ente-io/web
          imagePullPolicy: IfNotPresent
          ports:
            - name: web
              containerPort: 3000
              protocol: TCP
            - name: accounts
              containerPort: 3001
              protocol: TCP
            - name: albums
              containerPort: 3002
              protocol: TCP
            - name: auth
              containerPort: 3003
              protocol: TCP
            - name: cast
              containerPort: 3004
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: web
          readinessProbe:
            httpGet:
              path: /
              port: web
          resources:
            limits:
              cpu: 50m
              memory: 256Mi
            requests:
              cpu: 25m
              memory: 64Mi
