base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ente
  labels:
    app.kubernetes.io/component: ingress
spec:
  rules:
    - host: accounts.ente.example
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ente-web
                port:
                  name: accounts
    - host: albums.ente.example
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ente-web
                port:
                  name: albums
    - host: api.ente.example
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ente-museum
                port:
                  name: http
    - host: cast.ente.example
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ente-web
                port:
                  name: cast
    - host: web.ente.example
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ente-web
                port:
                  name: web
    - host: locker.ente.example
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: ente-web
                port:
                  name: locker
